--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
                 "modules": false
             }
         ],
-        "@babel/react"
+        "@babel/react",
+        "@babel/typescript"
     ]
 }
