--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "@babel/core": "^7.12.10",
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
+        "@babel/preset-typescript": "^7.12.13",
+        "@types/react": "^17.0.1",
+        "@types/react-dom": "^17.0.0",
         "babel-loader": "^8.2.2",
         "css-loader": "^5.0.1",
         "eslint": "^7.19.0",
